--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.config.import=optional:file:config.properties
+spring.datasource.url=jdbc:h2:${DB_PATH}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+management.endpoints.web.exposure.include=*
