--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ target/
 .springBeans
 .sts4-cache
 
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -31,3 +32,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+config.properties
