--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.config.import=optional:file:config.properties
-spring.datasource.url=jdbc:h2:${DB_PATH}
+CONFIG_PROPERTIES_PATH=config.properties
+spring.config.import=optional:file:${CONFIG_PROPERTIES_PATH}
+spring.datasource.url=jdbc:h2:${project.basedir:}${DB_PATH}
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
 server.port=8080
