added the edit and delete task feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 CONFIG_PROPERTIES_PATH=config.properties
 spring.config.import=optional:file:${CONFIG_PROPERTIES_PATH}
-spring.datasource.url=jdbc:h2:${project.basedir:}${DB_PATH}
+#spring.datasource.url=jdbc:h2:${project.basedir:}${DB_PATH}
+spring.datasource.url=jdbc:h2:mem:streak-app
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
 server.port=8080
+#spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID}
+#
+#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
+
