added the api-docs endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
 server.port=8080
+springdoc.api-docs.path=/api-docs
+
 #spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID}
 #
 #spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
